--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body * {
 }
 .navbar {
     background-color: #DFEEE7;
-    padding-left: 40px;
+    padding-left: 25px;
 }
 
 .app {
@@ -25,7 +25,6 @@ body * {
 .display{
     width: 480px;
     height: 320px;
-    margin-right: 10px;
     border: 1px solid black;
     background-color: white;
 }
@@ -38,26 +37,44 @@ body * {
 } */
 
 .memo-bg {
-    background-image: url("images/howcuttingdo.jpg");
+    background-image: url("images/pablo-merchan-montes-Orz90t6o0e4-unsplash-1350x900.jpg");
     background-size: cover;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
     height: 500px;
 }
 
-.memo-1 {
+.memo-1, .memo-2, .memo-3 {
     margin: 5%;
+    color: white;
+}
+
+
+.memo-1 {
+    width: 30%;
+    text-align: justify;
+    align-items: center;
 }
 
 
 .memo-2 {
+    width: 30%;
+    color: black;
+}
+
+
+.memo-3 {
     color: whitesmoke;
     display: flex;
     flex-direction: column;
-    width: 200px;
-    margin: 10px;
+    width: 20%;
+    
+}
+
+.memo-3 *{
+    margin: 3px;
 }
 
 
@@ -69,17 +86,19 @@ body * {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    color: white;
+    
 }
 
 .search-1, .search-2, .search-3 {
     margin: 5%;
+    color: white;
 }
 
 
 .search-1 {
     width: 30%;
     text-align: justify;
+    align-items: center;
 }
 
 .search-2 {
@@ -91,6 +110,10 @@ body * {
     width: 20%;
     display: flex;
     flex-direction: column;
+}
+
+.search-3 *{
+    margin: 3px;
 }
 
 
