--- a/style.css
+++ b/style.css
@@ -116,27 +116,37 @@ body * {
     margin: 3px;
 }
 
-
-
-
-/* .search-1 {
-    text-align: center;
-}
-
-.memo-2, .search-2 {
-    color: whitesmoke;
-    display: flex;
-    flex-direction: column;
-    width: 200px;
-}
-
-.memo-2 *, .search-2 * {
-    margin: 5%; 
-} */
-
-
 .footer {
     background-color: #DFEEE7;
     text-align: right;
     padding: 30px;
+}
+
+@media (max-width:700px) {
+    .header, .navbar {
+        display: flex;
+        justify-content: center;
+    }
+    
+    
+    
+    .memo-bg {
+        display: flex;
+        flex-direction: column;
+        height: 50%;
+    }
+    .search-base {
+        display: flex;
+        flex-direction: column;
+        height: 50%;
+        align-items: center;
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
 }
