--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ body * {
 .search-2 {
     width: 30%;
     color: black;
+    text-align: center;
 }
 
 .search-3 {
@@ -127,14 +128,12 @@ body * {
         display: flex;
         justify-content: center;
     }
-    
-    
-    
     .memo-bg {
         display: flex;
         flex-direction: column;
         height: 50%;
     }
+    
     .search-base {
         display: flex;
         flex-direction: column;
