--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body * {
     display: flex;
     flex-direction: column;
     width: 20%;
-    
+    align-items: center;
 }
 
 .memo-3 *{
@@ -111,6 +111,8 @@ body * {
     width: 20%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .search-3 *{
@@ -122,6 +124,17 @@ body * {
     text-align: right;
     padding: 30px;
 }
+
+
+.input {
+    width: 200px;
+}
+
+.btn {
+    width: 150px;
+}
+
+
 
 @media (max-width:700px) {
     .header, .navbar {
