--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body * {
     justify-content: flex-end;
     align-items: center;
     height: 500px;
+    opacity: 0.9;
 }
 
 .memo-1, .memo-2, .memo-3 {
@@ -80,13 +81,13 @@ body * {
 
 
 .search-base {
-    background-image: url("images/imrs.webp");
+    background-image: url("images/test.jpg");
+    opacity: 0.8;
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    
 }
 
 .search-1, .search-2, .search-3 {
@@ -99,6 +100,7 @@ body * {
     width: 30%;
     text-align: justify;
     align-items: center;
+    color: whitesmoke;    
 }
 
 .search-2 {
