--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body * {
 
 .header {
     padding: 2%;
-    color: black;
+    color: whitesmoke;
+    background-color: #1B2938;
 }
 
 .header p {
@@ -57,6 +58,7 @@ body * {
     width: 30%;
     text-align: justify;
     align-items: center;
+    opacity: 1;
 }
 
 
@@ -162,5 +164,10 @@ body * {
         align-items: center;
         text-align: center;
         justify-content: center;
+    }
+
+    .display {
+        height: 300px;
+        width: 300px;
     }
 }
