--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body * {
     box-sizing: border-box;
 }
 
+
+
 .header {
     padding: 2%;
     color: whitesmoke;
@@ -83,14 +85,24 @@ body * {
 
 
 .search-base {
-    background-image: url("images/test.jpg");
-    opacity: 0.8;
+    /* background-image: url("images/test.jpg"); */
+    /* opacity: 0.8;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
     display: flex;
     flex-direction: row;
     justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);  
 }
+
+#overlay {
+    background-image: url("images/test.jpg");
+    opacity: 0.9;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+
 
 .search-1, .search-2, .search-3 {
     margin: 5%;
@@ -102,7 +114,7 @@ body * {
     width: 30%;
     text-align: justify;
     align-items: center;
-    color: whitesmoke;    
+    color: whitesmoke;  
 }
 
 .search-2 {
